Refactor voting method references and update analysis outputs
- Changed voting method from 'rank' to 'rank_milp' in inconsistency spectrum data.
- Added corrected figures for inconsistency spectrum and reversal heatmap.
- Updated reversal heatmap data with new values.
- Revised producer memo with updated findings and analysis.
- Modified results table to reflect changes in voting methods and scores.
- Adjusted season summary data for consistency with new voting methods.
- Updated logging format in analysis pipeline for feasibility results.

--- a/develop-problem-C/PaperC/appendices/appendix_code.tex
+++ b/develop-problem-C/PaperC/appendices/appendix_code.tex
@@ -35,10 +35,10 @@ model.fit(df[['weeks','eliminated','judge_score','fan_vote','celeb_type']],
 hazard_ratios = np.exp(model.summary['coef'])
 \end{lstlisting}
 
-\subsection*{A.3 Weighted Borda Mechanism}
+\subsection*{A.3 Weighted Percent Mechanism}
 
-\begin{lstlisting}[language=Python, caption={Borda counterfactual}]
-def borda_score(j_scores, v_shares, alpha=0.6):
+\begin{lstlisting}[language=Python, caption={Weighted Percent counterfactual}]
+def weighted_percent_score(j_scores, v_shares, alpha=0.6):
     j_norm = (j_scores - j_scores.min()) / (j_scores.ptp() + 1e-8)
     v_norm = (v_shares - v_shares.min()) / (v_shares.ptp() + 1e-8)
     return alpha * j_norm + (1-alpha) * v_norm
