--- a/develop-problem-C/PaperC/sections/02_assumptions.tex
+++ b/develop-problem-C/PaperC/sections/02_assumptions.tex
@@ -17,6 +17,6 @@
     
     \item \textbf{Temporal Independence.} Fans cannot condition on hidden vote shares from prior weeks.
     
-    \item \textbf{External Shock Detection.} Interventions manifest as constraint infeasibility.
+    \item \textbf{Model-Data Mismatch Detection.} Unmodeled factors (e.g., judge save subjectivity, rule variations) manifest as constraint slack $S^* > 0$.
 
 \end{enumerate}
