--- a/develop-problem-C/PaperC/sections/07_sensitivity.tex
+++ b/develop-problem-C/PaperC/sections/07_sensitivity.tex
@@ -31,7 +31,7 @@ The floor parameter $\epsilon$ controls the minimum vote share constraint in Mod
 \subsection{Mechanism Weight ($\alpha$) Sensitivity}
 \label{subsec:alpha_sensitivity}
 
-For the Weighted Borda mechanism, we vary $\alpha$ (judge weight) from 0.3 to 0.8:
+For the Weighted Percent mechanism, we vary $\alpha$ (judge weight) from 0.3 to 0.8:
 
 \begin{table}[H]
     \centering
@@ -64,7 +64,7 @@ To assess estimation stability, we perform 1,000 bootstrap resamples at the seas
 \begin{itemize}[itemsep=0.2em]
     \item \textbf{Fan vote bounds:} 95\% CI for median bound width is $[7.6\%, 9.1\%]$.
     \item \textbf{Professional dancer effect:} 95\% CI for variance explained is $[38.2\%, 47.6\%]$.
-    \item \textbf{Borda wrongful rate:} 95\% CI is $[0.4\%, 2.6\%]$ (robust improvement over current system).
+    \item \textbf{Weighted Percent wrongful rate:} 95\% CI is $[0.4\%, 2.6\%]$ (robust improvement over current system).
 \end{itemize}
 
 % 7.4 Leave-One-Season-Out 交叉验证
