--- a/develop-problem-C/PaperC/sections/00_abstract.tex
+++ b/develop-problem-C/PaperC/sections/00_abstract.tex
@@ -3,18 +3,18 @@
 
 \begin{abstract}
 
-\emph{Dancing with the Stars} (DWTS) combines judge scores with viewer votes to determine weekly eliminations, yet individual fan vote shares remain unpublished. We develop a \textbf{Dual-Core Inversion Engine} to reconstruct latent fan vote distributions from elimination outcomes across all 34 US seasons.
+\emph{Dancing with the Stars} (DWTS) combines judge scores with viewer votes to determine weekly eliminations, yet individual fan vote shares are never directly disclosed. We develop a \textbf{Dual-Core Inversion Engine} to reconstruct latent fan vote distributions from elimination outcomes across all 34 US seasons.
 
-For \emph{percent-disclosed} seasons (S3--S27), we formulate fan vote inference as a \textbf{Linear Programming (LP)} problem with slack variables, deriving tight bounds on each contestant's vote share. For \emph{rank-only} seasons (S1--S2, S28--S34), we employ \textbf{Constraint Programming (CP)} with interval arithmetic. Both solvers incorporate rule changes (immunity, double eliminations, judge save) from official archives.
+For \emph{percent-disclosed} seasons (S3--S27), we formulate fan vote inference as a \textbf{Linear Programming (LP)} problem with slack variables, where judge percentages are computed as $J_i / \sum_k J_k$ (sum, not mean). For \emph{rank-only} seasons (S1--S2, S28--S34), fan vote ranks are treated as \textbf{latent decision variables} and solved via \textbf{Mixed-Integer Linear Programming (MILP)} with permutation constraints. Both solvers incorporate rule changes (immunity, double eliminations, judge save) from official archives.
 
-Our framework identifies \textbf{two anomalous seasons}---S32 and S33---where no feasible fan vote assignment exists even under relaxed constraints ($\epsilon \to 0$). The ``Money Plot'' visualizes constraint slack $S^*(\epsilon)$: normal seasons remain feasible throughout $\epsilon \in [0\%, 10\%]$, while S32/S33 exhibit positive slack at $\epsilon = 0\%$, suggesting production interventions.
+Our framework identifies \textbf{model-data mismatches} in S32 and S33---where constraint slack $S^* > 0$ indicates unexplained outcomes. Possible causes: undocumented rule variations, judge save decisions, or external factors.
 
-Building on inferred votes, \textbf{Cox survival analysis} reveals: (1) professional partner explains 42.9\% of survival variance; (2) judge scores dominate early rounds while fan momentum drives late-stage outcomes.
+Building on inferred votes, \textbf{Cox survival analysis} reveals: (1) professional partner explains 42.9\% of survival variance (measured by partial $R^2$); (2) judge scores dominate early rounds while fan momentum drives late-stage outcomes.
 
-We propose a \textbf{Weighted Borda Count} mechanism ($0.6 \times \text{Judge} + 0.4 \times \text{Fan}$) achieving \textbf{92.5\% reduction} in wrongful eliminations. A \textbf{Safety Net Protocol} provides real-time anomaly detection for producers.
+We propose a \textbf{Weighted Percent} mechanism ($0.6 \times \text{JudgePct} + 0.4 \times \text{FanPct}$) achieving \textbf{92.5\% reduction} in wrongful eliminations. Case studies of Jerry Rice (S2) and Bobby Bones (S27) illustrate key controversies.
 
 \begin{keywords}
-inverse problems; linear programming; constraint satisfaction; survival analysis; mechanism design; anomaly detection
+inverse problems; linear programming; mixed-integer programming; survival analysis; mechanism design
 \end{keywords}
 
 \end{abstract}
