--- a/develop-problem-C/PaperC/sections/08_evaluation.tex
+++ b/develop-problem-C/PaperC/sections/08_evaluation.tex
@@ -4,7 +4,7 @@
 \section{Model Evaluation}
 \label{sec:evaluation}
 
-We evaluate our framework across consistency, external validation, and efficiency.
+We evaluate our framework via consistency tests, case studies, and efficiency benchmarks.
 
 \subsection{Internal Consistency}
 
@@ -13,24 +13,32 @@ We evaluate our framework across consistency, external validation, and efficienc
     \item Median week-to-week change: $|\hat{v}_{i,w} - \hat{v}_{i,w-1}| = 3.2\%$; autocorrelation $\rho = 0.71$.
 \end{itemize}
 
-\subsection{External Validation}
+\subsection{Case Study Gallery}
+\label{subsec:case_studies}
 
-Correlation with social media (47 contestants with data): Instagram followers $r = 0.52$, Twitter engagement $r = 0.41$ ($p < 0.01$), suggesting inferred votes capture genuine popularity.
+\textbf{Case 1: Jerry Rice (S2, 2nd Place)---Rank Rules.}
+Rice averaged 22.5 judge points (3rd among finalists), yet finished 2nd. Under our MILP model with fan ranks as decision variables, the feasibility analysis shows a fan ranking of 1st or 2nd is required to explain his placement---implying massive fan support overcame moderate technical scores.
 
-\begin{table}[H]
+\textbf{Case 2: Bobby Bones (S27, 1st Place)---Percent Rules.}
+Bones averaged only 22.4 judge points, substantially below Milo Manheim (27.3), Evanna Lynch (26.1), and Alexis Ren (26.5). Our LP inversion reveals an \emph{extremely wide} survival interval: $v_{\text{Bones}} \in [0.01, 0.91]$ at Week 7 (see Figure~\ref{fig:bobby_survival}). This means: even with fan support as low as 1\%, Bones could still survive under the percent system.
+
+\begin{figure}[H]
     \centering
-    \caption{Anomaly Detection vs.\ Known Controversies}
-    \label{tab:anomaly_validation}
-    \begin{tabular}{lccc}
-        \toprule
-        \textbf{Season} & \textbf{Our Flag} & \textbf{Public Controversy} & \textbf{Match} \\
-        \midrule
-        S30 & Normal & Mild complaints & \checkmark \\
-        S32 & \textbf{Anomaly} & Major backlash & \checkmark \\
-        S33 & \textbf{Anomaly} & Voting irregularity reports & \checkmark \\
-        \bottomrule
-    \end{tabular}
-\end{table}
+    \includegraphics[width=0.75\textwidth]{figures/bobby_bones_survival.png}
+    \caption{Bobby Bones (S27) survival interval over time. The wide feasible region illustrates how the 50/50 percent system offers excessive protection to celebrities with strong fan bases, regardless of technical performance.}
+    \label{fig:bobby_survival}
+\end{figure}
+
+\noindent\textbf{Key Insight:} This wide interval demonstrates that the current percent system offers \emph{excessive protection} to celebrities with dedicated fan bases, making technical skill almost irrelevant for survival. This finding motivates our Weighted Percent proposal (\secref{sec:model3}).
+
+\textbf{Case 3: S32--S33 Model-Data Mismatch.}
+Constraint slack $S^* > 0$ at specific weeks reveals outcomes not fully explainable by our model assumptions. For S32, $S^* = 2.0$ with reversal weeks at Week 2 and 3; for S33, $S^* = 1.0$ with reversal at Week 2. Possible explanations:
+\begin{itemize}[itemsep=0.1em]
+    \item Judges' Save decisions introduce subjectivity not captured by rank-sum logic.
+    \item Bottom-two selection mechanics may involve production discretion.
+    \item Multi-dance week score aggregation may differ from our assumptions.
+\end{itemize}
+\noindent These mismatches are \emph{not} evidence of manipulation, but highlight the mathematical complexity introduced by S28+ rule changes.
 
 \subsection{Comparison with Alternatives}
 
@@ -44,11 +52,11 @@ Correlation with social media (47 contestants with data): Instagram followers $r
         \midrule
         Naive uniform & 73\% & 0.50 \\
         Judge-only regression & 28\% & 0.61 \\
-        \textbf{Our LP/CP} & \textbf{0\%} & \textbf{0.72} \\
+        \textbf{Our LP/MILP} & \textbf{0\% (S1--S31)} & \textbf{0.72} \\
         \bottomrule
     \end{tabular}
 \end{table}
 
 \subsection{Computational Efficiency}
 
-Total runtime: \textbf{19.8 sec} on standard laptop (i7, 16GB RAM), comprising data loading (2.3s), LP (8.7s), CP (1.2s), survival analysis (3.5s), and simulation (4.1s).
+Total runtime: \textbf{19.8 sec} on standard laptop (i7, 16GB RAM).
