--- a/develop-problem-C/PaperC/sections/09_conclusion.tex
+++ b/develop-problem-C/PaperC/sections/09_conclusion.tex
@@ -11,19 +11,19 @@ This paper developed a comprehensive framework for inferring fan votes from \emp
 \begin{enumerate}[itemsep=0.2em]
     \item \textbf{Dual-Core Inversion:} Successfully reconstructed fan vote distributions for 32 of 34 seasons using hybrid LP/CP with 100\% constraint satisfaction and median bound width of 8.3\%.
     
-    \item \textbf{Anomaly Detection:} Identified S32/S33 as ``hard anomalies'' where no feasible fan vote exists under standard logic, providing an early warning system for voting irregularities.
+    \item \textbf{Model-Data Mismatch Detection:} Identified S32/S33 with constraint slack $S^* > 0$, revealing mathematical complexity introduced by Judges' Save mechanics. This is \emph{not} evidence of manipulation, but highlights modeling challenges in S28+ rules.
     
-    \item \textbf{Professional Dancer Effect:} Survival analysis reveals professional partner explains \textbf{42.9\%} of variance---larger than celebrity type (8.2\%) or prior fame (3.7\%).
+    \item \textbf{Professional Dancer Effect:} Survival analysis reveals professional partner explains \textbf{42.9\%} of variance (partial $R^2$)---larger than celebrity type (8.2\%) or prior fame (3.7\%).
     
-    \item \textbf{Weighted Borda Count:} Proposed mechanism ($0.6J + 0.4V$) reduces wrongful eliminations by \textbf{92.5\%}.
+    \item \textbf{Weighted Percent System:} Proposed mechanism ($0.6J^\% + 0.4V$) reduces wrongful eliminations by \textbf{92.5\%}.
 \end{enumerate}
 
 \subsection{Recommendations}
 
 \begin{enumerate}[itemsep=0.2em]
-    \item \textbf{Pre-Broadcast Checks:} Run LP/CP solver before broadcast; flag $S^* > 0.5$.
-    \item \textbf{Adopt Weighted Borda:} $\text{Score}_i = 0.6 \widetilde{J}_i + 0.4 \widetilde{V}_i$.
-    \item \textbf{Diversify Dancer Pool:} Rotate professionals or balance historical win rates.
+    \item \textbf{Pre-Broadcast Transparency:} Run LP/MILP solver before broadcast; flag episodes with $S^* > 0.5$ for producer review.
+    \item \textbf{Adopt Weighted Percent:} $\text{Score}_i = 0.6 \cdot J_i^\% + 0.4 \cdot V_i$ --- transparent ``60\% skill, 40\% popularity.''
+    \item \textbf{Judges' Save Transparency:} Document criteria for judge save decisions to reduce model-data mismatches.
 \end{enumerate}
 
 \subsection{Limitations}
@@ -40,4 +40,4 @@ This paper developed a comprehensive framework for inferring fan votes from \emp
 Future extensions: (1) real-time dashboard for producers, (2) international expansion to \emph{Strictly Come Dancing} and other franchises, (3) incorporating social media sentiment to tighten bounds.
 
 \vspace{0.5em}
-\noindent\textbf{Key Takeaway:} The current DWTS system produces 17.4\% wrongful eliminations. Our Weighted Borda reduces this to 1.3\%---a \textbf{92.5\% improvement}---while maintaining viewer engagement.
+\noindent\textbf{Key Takeaway:} The current DWTS system produces 17.4\% wrongful eliminations. Our Weighted Percent System reduces this to 1.3\%---a \textbf{92.5\% improvement}---while maintaining viewer engagement through transparent, audience-friendly scoring.
