--- a/develop-problem-C/PaperC/sections/memo.tex
+++ b/develop-problem-C/PaperC/sections/memo.tex
@@ -1,4 +1,4 @@
-% Memo: Safety Net Protocol Recommendation (Compact Version)
+% Memo: Transparency Protocol Recommendation
 
 \newpage
 \thispagestyle{empty}
@@ -13,30 +13,42 @@
 
 \begin{tabular}{@{}ll}
 \textbf{TO:}      & Director of Programming, \emph{Dancing with the Stars} \\
-\textbf{FROM:}    & Team \#2617892, Data Forensic Consultants \\
+\textbf{FROM:}    & Team \#2617892, Data Analytics Consultants \\
 \textbf{DATE:}    & January 26, 2026 \\
-\textbf{SUBJECT:} & \textbf{System Integrity Failure Detected in Seasons 32--33}
+\textbf{SUBJECT:} & \textbf{Balancing Entertainment and Fairness: A Transparency Protocol}
 \end{tabular}
 
 \vspace{0.3em}
 \noindent\rule{\textwidth}{1.5pt}
 \vspace{0.8em}
 
-\subsection*{Finding}
+\subsection*{Executive Summary}
 
-Our forensic audit reveals that \textbf{Seasons 32--33 are structurally infeasible}---no combination of fan votes and judge scores can explain the observed eliminations under published rules. For 31 consecutive seasons (S1--S31), our LP/CP inversion engine achieved 100\% feasibility. Beginning with S32, constraint slack spiked to $S^* = 2.0$, indicating the Judges' Save mechanic created mathematically unjustifiable outcomes.
+We commend the Judges' Save rule (introduced S28) for increasing dramatic tension and giving judges meaningful agency. However, our analysis reveals \textbf{model-data mismatches} in S32--S33 that warrant attention---not as evidence of wrongdoing, but as opportunities for improved transparency.
 
-\subsection*{Solution: Safety Net Protocol}
+\subsection*{Key Findings}
+
+\begin{itemize}[itemsep=0.1em]
+    \item \textbf{S1--S31:} Our LP/MILP model achieves $S^* = 0$ (full consistency with voting rules).
+    \item \textbf{S32--S33:} Constraint slack $S^* > 0$ indicates outcomes our model cannot fully explain.
+    \item \textbf{Bobby Bones (S27):} Wide survival intervals ($[1\%, 91\%]$) demonstrate how the 50/50 system can protect low-scoring contestants with strong fan bases.
+\end{itemize}
+
+\noindent Possible causes for S32--33 mismatches: (1) subjective judge save criteria, (2) bottom-two selection mechanics, (3) multi-dance score aggregation.
+
+\subsection*{Recommendations: Tiered Transparency System}
 
 \begin{enumerate}[itemsep=0.2em]
-    \item \textbf{Weighted Borda Count:} Replace 50/50 system with $0.6 \times \text{Judge} + 0.4 \times \text{Fan}$. Simulations show \textbf{92.5\% reduction} in wrongful eliminations.
+    \item \textbf{Weighted Percent Scoring:} Adopt $0.6 \times \text{JudgePct} + 0.4 \times \text{FanPct}$. Marketing message: ``60\% skill, 40\% popularity.'' Simulations show \textbf{92.5\% reduction} in wrongful eliminations while preserving fan engagement.
     
-    \item \textbf{Pre-Broadcast Check:} Run LP solver before results show ($<5$ sec). Flag episodes with $S^* > 0.5$ for manual review.
+    \item \textbf{Judge Save Transparency:} Document and announce criteria for judge save decisions (e.g., ``technical improvement shown'' or ``cumulative season performance''). This reduces perceived arbitrariness.
+    
+    \item \textbf{Pre-Broadcast Audit (Internal):} Run LP solver before results announcement ($<5$ sec). Flag episodes with $S^* > 0.5$ for producer review---not to change outcomes, but to prepare explanations if questioned.
 \end{enumerate}
 
-\subsection*{Recommendation}
+\subsection*{Why This Matters}
 
-Implement for Season 35. This restores the ``Professional Floor'' while maintaining viewer engagement.
+The Judges' Save adds suspense and rewards quality---both valuable for entertainment. Our recommendations \emph{enhance} this by making the save more defensible and the overall system more transparent. Viewers who understand the scoring are more invested, not less.
 
 \vspace{0.5em}
 \hfill\textbf{--- Team \#2617892}
